[docs] 기존 이미지 경로 CDN 경로로 수정

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -192,7 +192,7 @@ layout: post
     <h3 id="미리보기">미리보기</h3>
     {% assign imgList = page.intro.thumbnail | split: ", " %}
     {% for img in imgList %}
-    <img src="{{ img }}" alt="{{ img }}">
+    <img src="https://cdn.jsdelivr.net/gh/jisu-yang/jisu-yang.github.io/docs/essay/project-review/resource/{{ img }}" alt="{{ img }}">
     {% endfor %}
 </div>
 
