[feat] 구글 웹 폰트 적용
- Noto Sans KR

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,4 +36,11 @@
 
   {% include head_custom.html %}
 
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+    *{
+      font-family: 'Noto Sans KR', sans-serif;
+      line-height: 1.8em;
+    }
+  </style>
 </head>
