--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,6 +2,24 @@
 layout: post
 ---
 <style>
+    h2{
+        color: #7253ed;
+    }
+    p > img{
+        width: calc(100% - 2em - 2px);
+        border-radius: 6px;
+        margin: 1em;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    }
+    p:has(img){
+        border-radius: 6px;
+        background: #f5f6fa;
+        line-height: 0 !important;
+        margin: 2em 0;
+    }
+    .highlight{
+        border-radius: 6px;
+    }
     #summary-list{
         display: flex;
         justify-content: space-between;
@@ -55,13 +73,13 @@ layout: post
         position: relative;
         width: 100%;
         height: 600px;
-        padding: 20px;
+        padding: 1em;
         border-radius: 6px;
-        border: 1px solid  #eeebee;
+        background: #f5f6fa;
     }
     .thumbnail-image{
         position: absolute;
-        width: calc(100% - 40px);
+        width: calc(100% - 2em);
         height: 480px;
         display: flex;
         justify-content: center;
@@ -72,6 +90,7 @@ layout: post
         max-width: 100%;
         border-radius: 6px;
         object-fit: contain;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
         z-index: 5;
     }
     .thumbnail-image img:not(:first-child){
@@ -95,6 +114,7 @@ layout: post
         padding: 4px;
         background: #fff;
         cursor: pointer;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     }
     .thumbnail-stack img:first-child{
         border:1px solid #7253ed;
@@ -108,9 +128,7 @@ layout: post
         font-size: 0.8em;
         vertical-align: bottom;
     }
-    h2{
-        color: #7253ed;
-    }
+
 </style>
 
 <hr>
