--- a/_layouts/note_shorts.html
+++ b/_layouts/note_shorts.html
@@ -43,7 +43,7 @@ layout: table_wrappers
     {% include icons/code_copy.html %}
 </svg>
 
-{% include note_series_sidebar.html pages=site.html_pages key=nil %}
+{% include note_shorts_sidebar.html pages=site.html_pages key=nil %}
 
 <div class="main" id="top">
     <div id="main-header" class="main-header">
