[fix] 시리즈 노트 목록 링크 문제
- 잘못된 링크 생성 수정
- 목록의 항목에 id 추가

--- a/_includes/note_series_sidebar.html
+++ b/_includes/note_series_sidebar.html
@@ -181,7 +181,7 @@ Grouping by a single character also ensures the number of groups is small.
         <div id="project-information">
             <div id="information-parent">
                 <div class="fs-4 fw-700">
-                    <a href="/docs/archive/learning-notes/#{{ page.study | downcase | replace: ' ', '-' }}" title="목록" class="text-grey-dk-100">{{ page.study }}</a>
+                    <a href="/docs/archive/learning-notes.html#{{ page.study | downcase | replace: ' ', '-' }}" title="목록" class="text-grey-dk-100">{{ page.study }}</a>
                 </div>
             </div>
         </div>
