--- a/_includes/note_series_sidebar.html
+++ b/_includes/note_series_sidebar.html
@@ -110,7 +110,7 @@ Grouping by a single character also ensures the number of groups is small.
 
     }
     .nav-series ul{
-        padding-left: 1em;
+        padding-left: 10px;
     }
     .nav-series ul li{
         list-style-type: decimal;
@@ -122,7 +122,7 @@ Grouping by a single character also ensures the number of groups is small.
     }
     .toc-entry{
         list-style-type: none;
-        font-size: 9pt;
+        font-size: 10pt;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -130,12 +130,15 @@ Grouping by a single character also ensures the number of groups is small.
         min-height: 1.4rem;
         line-height: 1.4rem;
     }
+    .toc-entry > ul {
+        padding-left: 20px;
+    }
     .toc-entry > a{
         color: #959396;
         text-decoration: none;
     }
-    .toc-h3{
-        margin-bottom: 1rem;
+    li.toc-entry.toc-h1{
+        margin-bottom: 1em;
     }
 </style>
 
@@ -147,7 +150,9 @@ Grouping by a single character also ensures the number of groups is small.
         </a>
     </div>
     <nav aria-label="Main" id="site-nav" class="site-nav">
-        <div class="ml-6 mb-4 fs-4 fw-700 text-grey-dk-100">{{ page.chapter }}. {{ page.title }}</div>
+        <div class="ml-6 mb-4 fs-4 fw-700 text-grey-dk-100">Chapter {{ page.chapter }}</div>
+        <div class="ml-6 mb-4 fs-4 fw-700 text-grey-dk-100">{{ page.title }}</div>
+
         {{ content | toc_only }}
 
         {% if page.reference != nil %}
