--- a/_includes/note_shorts_sidebar.html
+++ b/_includes/note_shorts_sidebar.html
@@ -122,7 +122,7 @@ Grouping by a single character also ensures the number of groups is small.
     }
     .toc-entry{
         list-style-type: none;
-        font-size: 9pt;
+        font-size: 10pt;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -130,12 +130,15 @@ Grouping by a single character also ensures the number of groups is small.
         min-height: 1.4rem;
         line-height: 1.4rem;
     }
+    .toc-entry > ul {
+        padding-left: 20px;
+    }
     .toc-entry > a{
         color: #959396;
         text-decoration: none;
     }
-    .toc-h3{
-        margin-bottom: 1rem;
+    li.toc-entry.toc-h1{
+        margin-bottom: 1em;
     }
 </style>
 
