--- a/assets/css/custom/custom.scss
+++ b/assets/css/custom/custom.scss
@@ -28,3 +28,12 @@ body {
 .active > .nav-list-link{
   font-weight: 700;
 }
+
+div.table-wrapper{
+  box-shadow: none;
+  border-collapse: collapse;
+}
+
+th, td{
+  border-left: none;
+}
