[mod] 카테고리 이름 변경

--- a/_layouts/experience_sparta.html
+++ b/_layouts/experience_sparta.html
@@ -172,7 +172,7 @@ layout: table_wrappers
 
         <div id="main-content" class="main-content" role="main">
 
-            {%- assign sparta_til = second_level_pages | where: "parent", "SPARTA 부트캠프" -%}
+            {%- assign sparta_til = second_level_pages | where: "parent", "SPARTA 일일 회고" -%}
 
             <img src="https://github.com/BobJool/Waiting-Reservation-Service/wiki/resources/images/250112-sparta-background.png" alt="내일배움캠프" style="border-radius: 6px"/>
 
